--- a/crafts/templates/customer_signup.html
+++ b/crafts/templates/customer_signup.html
@@ -1,10 +1,19 @@
 {% extends 'navbar.html' %}
 
 {% block content %}
+
+<body>
+
   <h2>Customer Signup</h2>
+
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ user_form.as_p }}
+    {{ customer_form.as_p }}
     <button type="submit">Sign Up</button>
   </form>
+
+</body>
+
+
 {% endblock %}
