--- a/crafts/templates/navbar.html
+++ b/crafts/templates/navbar.html
@@ -35,7 +35,7 @@
                         <li><a class="dropdown-item" href="#">Edit profile</a></li>
                         <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                         {% if user.artisan %}
-                            <li><a class="dropdown-item" href="#">Add Product</a></li>
+                            <li><a class="dropdown-item" href="{% url 'add_product' %}">Add Product</a></li>
                         {% endif %}
                     </ul>
                 </li>
@@ -56,6 +56,9 @@
                     <a class="nav-link mx-2" href="{% url 'artisan_signup' %}">Sign Up as artisan</a>
                 </li>
                 {% endif %}
+             {% if user.artisan %}
+                <li><a class="dropdown-item" href="{% url 'add_product' %}">Add Product</a></li>
+            {% endif %}
             </ul>
         </div>
     </div>
